Reording of pages. Removal of pages for individual targets

--- a/authors.html
+++ b/authors.html
@@ -23,132 +23,65 @@
 </head>
 <body>
 <!--This is the START of the menu-->
-      <div id="menu-wrapper">
+       <div id="menu-wrapper">
         <div id="main-menu">
             <ul class="collapsible" data-collapsible="accordion">
-                <h3>About</h3>
                 <li>
                      <div class="collapsible-menu-header">
                         <a href="authors.html">
                             <span class="title">Authors</span>
                         </a>
                     </div>
+                    <br>
                     <div class="collapsible-menu-header">
                         <a href="index.html">
                             <span class="title">Background</span>
                         </a>
                     </div>
-                </li>
-                <h3>Trends in homelessness in WA</h3>
-
-                <li>
-                    <div class="collapsible-menu-header">
-                        <a href="target1.html">
-                            <span class="title">Target 1</span>
-                        </a>
-                    </div>
+                    <br>
                 </li>
                 <li>
                     <div class="collapsible-menu-header">
-                        <a href="target2.html">
-                            <span class="title">Target 2</span>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-menu-header">
-                        <a href="target3.html">
-                            <span class="title">Target 3</span>
+                        <a href="trendsinhomelessness.html">
+                            <span class="title">Trends in homelessness in WA</span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
-                        <a href="target3.html#Target-3-Reducing-the-overall-rate-of-homelessness">
-                            <span class="title">Reducing the overall rate of homelessness</span>
+                        <a href="trendsinhomelessness.html#Ending-chronic-homelessness">
+                            <span class="title">Ending chronic homelessness in WA</span>
                         </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-menu-header">
-                        <a href="target5.html">
-                            <span class="title">Target 5</span>
+                        <br><br>
+                        <a href="trendsinhomelessness.html#Reducing-the-rate-of-homelessness">
+                            <span class="title">Reducing the rate of homelessness in WA</span>
                         </a>
-                    </div>
-                    <div class="collapsible-menu-body">
-                        <a href="target5.html#Target-5-Reducing-Aboriginal-homelessness">
+                        <br><br>
+                        <a href="trendsinhomelessness.html#Reducing-Aboriginal-homelessness">
                             <span class="title">Reducing Aboriginal homelessness</span>
                         </a>
                         <br><br>
-                        <a href="target5.html#Target-5-Reducing-regional-homelessness">
-                            <span class="title">Reducing regional homelessness</span>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-menu-header">
-                        <a href="target6.html">
-                            <span class="title">Target 6</span>
-                        </a>
-                    </div>
-                    <div class="collapsible-menu-body">
-                        <a href="target6.html#Target-6-Addressing-the-needs">
+                        <a href="trendsinhomelessness.html#Addressing-the-needs">
                             <span class="title">Addressing the needs of those experiencing homelessness</span>
                         </a>
                     </div>
+                    <br>
                 </li>
-
-                <h3>Preventing homelessness in WA</h3>
                 <li>
                     <div class="collapsible-menu-header">
-                        <a href="target4.html">
-                            <span class="title">Target 4</span>
+                        <a href="preventinghomelessness.html">
+                            <span class="title">Preventing homelessness in WA</span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
-                        <a href="target4.html#Target-4-Housing-affordability">
-                            <span class="title">Housing affordability</span>
+                        <a href="preventinghomelessness.html#Addressing-underlying-drivers">
+                            <span class="title">Addressing underlying drivers of homelessness in Western Australia</span>
                         </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Housing-supply">
-                            <span class="title">Housing supply</span>
-                        </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Poverty-and-unemployment">
-                            <span class="title">Poverty and unemployment</span>
-                        </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Young-people-in-custody">
-                            <span class="title">Young people in custody and out of home care</span>
-                        </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Physical-and-mental-health">
-                            <span class="title">Physical and mental health</span>
-                        </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Alcohol-and-drug-use">
-                            <span class="title">Alcohol and drug use</span>
-                        </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Domestic-violence">
-                            <span class="title">Domestic violence</span>
-                        </a>
-                     </div>
+                    </div>
+                    <br>
                 </li>
-
-                <h3>Progress in ending homelessness</h3>
                 <li>
                     <div class="collapsible-menu-header">
-                        <a href="target7.html">
-                            <span class="title">Target 7</span>
-                        </a>
-                    </div>
-                     <div class="collapsible-menu-header">
-                        <a href="target8.html">
-                            <span class="title">Target 8</span>
-                        </a>
-                    </div>
-                     <div class="collapsible-menu-header">
-                        <a href="target9.html">
-                            <span class="title">Target 9</span>
+                        <a href="funding.html">
+                            <span class="title">Funding of homelessness services</span>
                         </a>
                     </div>
                 </li>
@@ -225,9 +158,9 @@
     <br>
     <a href="mailto:Paul.Flatau@uwa.edu.au">Paul.Flatau@uwa.edu.au</a>
     <br><br>
-    <b>Suggested Citation:</b> Flatau P., Lester L., Callis Z., Kyron M. (2022). The Funding of Western Australian Homelessness Services, Perth: The University of Western Australia. https://doi.org/10.25916/xvt3-5c91
+    <b>Suggested Citation:</b> Flatau P., Lester L., Kyron M. (2022). The Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard 2022.  Version 4.0.  July 2022.
     <br>
-    <b>Keywords</b>: homelessness, Western Australia, funding, housing
+    <b>Keywords</b>: homelessness, Western Australia, outcomes framework, outcomes measurement, evaluation
     <br><br>
     <b>Centre for Social Impact</b>
     <br>
@@ -235,13 +168,13 @@
     <br><br>
     <b>Acknowledgements</b>
     <br>
-    The authors acknowledge the assistance of Western Australian homelessness agencies in preparing this report. The authors also drew on material from policy documents, public reports, and media publications.
-    <br>
-    The authors wish to acknowledge the funding of the study by XXX without which the study would not have been possible.
+        The authors acknowledge the assistance of Western Australian homelessness agencies in preparing this report. The authors also drew on material from policy documents, public reports, and media publications.
+        <br>
+    The authors wish to acknowledge the funding of the study by The Sisters of St John of God Ministries and The West Australian Alliance to End Homelessness without which the study would not have been possible.
     <br><br>
     <b>Disclaimer</b>
     <br>
-    The opinions in this report reflect the views of the authors and do not necessarily reflect those of the Centre for Social Impact, UWA or XXX.
+    The opinions in this report reflect the views of the authors and do not necessarily reflect those of the Centre for Social Impact, UWA, The Sisters of St John of God Ministries or The West Australian Alliance to End Homelessness.
     </p>
 
 
