--- a/index.html
+++ b/index.html
@@ -26,129 +26,62 @@
     <div id="menu-wrapper">
         <div id="main-menu">
             <ul class="collapsible" data-collapsible="accordion">
-                <h3>About</h3>
                 <li>
                      <div class="collapsible-menu-header">
                         <a href="authors.html">
                             <span class="title">Authors</span>
                         </a>
                     </div>
+                    <br>
                     <div class="collapsible-menu-header">
                         <a href="index.html">
                             <span class="title">Background</span>
                         </a>
                     </div>
-                </li>
-                <h3>Trends in homelessness in WA</h3>
-
-                <li>
-                    <div class="collapsible-menu-header">
-                        <a href="target1.html">
-                            <span class="title">Target 1</span>
-                        </a>
-                    </div>
+                    <br>
                 </li>
                 <li>
                     <div class="collapsible-menu-header">
-                        <a href="target2.html">
-                            <span class="title">Target 2</span>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-menu-header">
-                        <a href="target3.html">
-                            <span class="title">Target 3</span>
+                        <a href="trendsinhomelessness.html">
+                            <span class="title">Trends in homelessness in WA</span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
-                        <a href="target3.html#Target-3-Reducing-the-overall-rate-of-homelessness">
-                            <span class="title">Reducing the overall rate of homelessness</span>
+                        <a href="trendsinhomelessness.html#Ending-chronic-homelessness">
+                            <span class="title">Ending chronic homelessness in WA</span>
                         </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-menu-header">
-                        <a href="target5.html">
-                            <span class="title">Target 5</span>
+                        <br><br>
+                        <a href="trendsinhomelessness.html#Reducing-the-rate-of-homelessness">
+                            <span class="title">Reducing the rate of homelessness in WA</span>
                         </a>
-                    </div>
-                    <div class="collapsible-menu-body">
-                        <a href="target5.html#Target-5-Reducing-Aboriginal-homelessness">
+                        <br><br>
+                        <a href="trendsinhomelessness.html#Reducing-Aboriginal-homelessness">
                             <span class="title">Reducing Aboriginal homelessness</span>
                         </a>
                         <br><br>
-                        <a href="target5.html#Target-5-Reducing-regional-homelessness">
-                            <span class="title">Reducing regional homelessness</span>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-menu-header">
-                        <a href="target6.html">
-                            <span class="title">Target 6</span>
-                        </a>
-                    </div>
-                    <div class="collapsible-menu-body">
-                        <a href="target6.html#Target-6-Addressing-the-needs">
+                        <a href="trendsinhomelessness.html#Addressing-the-needs">
                             <span class="title">Addressing the needs of those experiencing homelessness</span>
                         </a>
                     </div>
+                    <br>
                 </li>
-
-                <h3>Preventing homelessness in WA</h3>
                 <li>
                     <div class="collapsible-menu-header">
-                        <a href="target4.html">
-                            <span class="title">Target 4</span>
+                        <a href="preventinghomelessness.html">
+                            <span class="title">Preventing homelessness in WA</span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
-                        <a href="target4.html#Target-4-Housing-affordability">
-                            <span class="title">Housing affordability</span>
+                        <a href="preventinghomelessness.html#Addressing-underlying-drivers">
+                            <span class="title">Addressing underlying drivers of homelessness in Western Australia</span>
                         </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Housing-supply">
-                            <span class="title">Housing supply</span>
-                        </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Poverty-and-unemployment">
-                            <span class="title">Poverty and unemployment</span>
-                        </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Young-people-in-custody">
-                            <span class="title">Young people in custody and out of home care</span>
-                        </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Physical-and-mental-health">
-                            <span class="title">Physical and mental health</span>
-                        </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Alcohol-and-drug-use">
-                            <span class="title">Alcohol and drug use</span>
-                        </a>
-                        <br><br>
-                        <a href="target4.html#Target-4-Domestic-violence">
-                            <span class="title">Domestic violence</span>
-                        </a>
-                     </div>
+                    </div>
+                    <br>
                 </li>
-
-                <h3>Progress in ending homelessness</h3>
                 <li>
                     <div class="collapsible-menu-header">
-                        <a href="target7.html">
-                            <span class="title">Target 7</span>
-                        </a>
-                    </div>
-                     <div class="collapsible-menu-header">
-                        <a href="target8.html">
-                            <span class="title">Target 8</span>
-                        </a>
-                    </div>
-                     <div class="collapsible-menu-header">
-                        <a href="target9.html">
-                            <span class="title">Target 9</span>
+                        <a href="funding.html">
+                            <span class="title">Funding of homelessness services</span>
                         </a>
                     </div>
                 </li>
@@ -175,7 +108,7 @@
     <div class="spacer"></div>
     <div class="clr"></div>
     <p>The Western Australian Alliance to End Homelessness presents the 2022 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard <i>(the Dashboard)</i>, which was first released in August 2019, and updated in June 2022.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?
-        <b>The Western Australian Alliance to End Homelessness is funded by the Sisters of St John of God Ministeries Inc.</b>
+        <br>The Western Australian Alliance to End Homelessness is funded by the Sisters of St John of God Ministeries Inc.
     </p>
     <br><br>
     <div id="Background">
