--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <br>
                     <div class="collapsible-menu-header">
                         <a href="index.html">
-                            <span class="title">Background</span>
+                            <span class="title">WAAEH Outcomes Measurement Framework</span>
                         </a>
                     </div>
                     <br>
