--- a/preventinghomelessness.html
+++ b/preventinghomelessness.html
@@ -27,15 +27,9 @@
         <div id="main-menu">
             <ul class="collapsible" data-collapsible="accordion">
                 <li>
-                     <div class="collapsible-menu-header">
-                        <a href="authors.html">
-                            <span class="title">Authors</span>
-                        </a>
-                    </div>
-                    <br>
                     <div class="collapsible-menu-header">
                         <a href="index.html">
-                            <span class="title">Background</span>
+                            <span class="title">WAAEH Outcomes Measurement Framework</span>
                         </a>
                     </div>
                     <br>
@@ -84,6 +78,14 @@
                             <span class="title">Funding of homelessness services</span>
                         </a>
                     </div>
+                </li>
+                <br>
+                <li>
+                    <div class="collapsible-menu-header">
+                       <a href="authors.html">
+                           <span class="title">Authors</span>
+                       </a>
+                   </div>
                 </li>
             </ul>
         </div>
