--- a/funding.html
+++ b/funding.html
@@ -29,7 +29,7 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="index.html">
-                            <span class="title">Background</span>
+                            <span class="title">WAAEH Outcomes Measurement Framework</span>
                         </a>
                     </div>
                     <br>
