--- a/preventinghomelessness.html
+++ b/preventinghomelessness.html
@@ -120,7 +120,7 @@
         <br><br>
 
         <h3>Housing affordability</h3><br>
-        <p3>Table. Housing affordability statistics and trends</p3>
+        <p3><b>Table 4.1.</b> Housing affordability statistics and trends</p3>
         <button type="button" class="collapsible">Housing affordability</button>
         <div class="tab-content">
             <table class="normal-table">
@@ -226,7 +226,7 @@
 
         <h3>Housing supply</h3>
         <br>
-        <p3>Table. Housing supply statistics and trends</p3>
+        <p3><b>Table 4.2.</b> Housing supply statistics and trends</p3>
         <button type="button" class="collapsible">Housing supply</button>
         <div class="tab-content">
 
@@ -295,7 +295,7 @@
 
         <h3>Poverty and unemployment</h3>
         <br>
-        <p3>Table. Poverty statistics and trends</p3>
+        <p3><b>Table 4.3</b>. Poverty statistics and trends</p3>
         <button type="button" class="collapsible">Poverty</button>
         <div class="tab-content">
             <table class="normal-table">
@@ -410,7 +410,7 @@
     <div id="Target-4-Physical-and-mental-health">
         <h3>Physical and mental health</h3>
         <br>
-        <p3>Table. Physical and mental health statistics and trends</p3>
+        <p3><b>Table 4.4.</b> Physical and mental health statistics and trends</p3>
 
         <button type="button" class="collapsible">Physical and mental health</button>
         <div class="tab-content">
@@ -474,7 +474,7 @@
     <div id="Target-4-Alcohol-and-drug-use">
         <h3>Alcohol and drug use</h3>
         <br>
-        <p3>Table. Alcohol and drug use statistics and trends</p3>
+        <p3><b>Table 4.5.</b> Alcohol and drug use statistics and trends</p3>
         <br>
         <button type="button" class="collapsible">Alcohol and drug use</button>
         <div class="tab-content">
@@ -553,7 +553,7 @@
     <div id="Target-4-Domestic-violence">
         <h3>Domestic violence</h3>
         <br>
-        <p3>Table. Domestic violence statistics and trends</p3>
+        <p3><b>Table 4.6.</b> Domestic violence statistics and trends</p3>
 
         <button type="button" class="collapsible">Domestic violence</button>
         <div class="tab-content">
