--- a/preventinghomelessness.html
+++ b/preventinghomelessness.html
@@ -351,7 +351,7 @@
     <div id="Target-4-Young-people-in-custody">
         <h3>Young people in custody and out of home care</h3>
         <br>
-        <p3>Table. Young people in custody and out-of-home care statistics and trends</p3>
+        <p3><b>Table 4.4.</b> Young people in custody and out-of-home care statistics and trends</p3>
 
         <button type="button" class="collapsible">Young people in custody and out-of-home care</button>
         <div class="tab-content">
@@ -410,7 +410,7 @@
     <div id="Target-4-Physical-and-mental-health">
         <h3>Physical and mental health</h3>
         <br>
-        <p3><b>Table 4.4.</b> Physical and mental health statistics and trends</p3>
+        <p3><b>Table 4.5.</b> Physical and mental health statistics and trends</p3>
 
         <button type="button" class="collapsible">Physical and mental health</button>
         <div class="tab-content">
@@ -474,7 +474,7 @@
     <div id="Target-4-Alcohol-and-drug-use">
         <h3>Alcohol and drug use</h3>
         <br>
-        <p3><b>Table 4.5.</b> Alcohol and drug use statistics and trends</p3>
+        <p3><b>Table 4.6.</b> Alcohol and drug use statistics and trends</p3>
         <br>
         <button type="button" class="collapsible">Alcohol and drug use</button>
         <div class="tab-content">
@@ -553,7 +553,7 @@
     <div id="Target-4-Domestic-violence">
         <h3>Domestic violence</h3>
         <br>
-        <p3><b>Table 4.6.</b> Domestic violence statistics and trends</p3>
+        <p3><b>Table 4.7.</b> Domestic violence statistics and trends</p3>
 
         <button type="button" class="collapsible">Domestic violence</button>
         <div class="tab-content">
