--- a/trendsinhomelessness.html
+++ b/trendsinhomelessness.html
@@ -37,7 +37,7 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="trendsinhomelessness.html">
-                            <span class="title"><u>Trends in homelessness in WA</u></span>
+                            <span class="title" style="color:red">Trends in homelessness in WA</span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
