--- a/policyandprogram.html
+++ b/policyandprogram.html
@@ -81,6 +81,19 @@
                 </li>
                 <br>
                 <li>
+                    <div class="collapsible-menu-header">
+                        <a href="policyandprogram.html">
+                            <span class="title">Trends in homelessness in WA</span>
+                        </a>
+                    </div>
+                    <div class="collapsible-menu-body">
+                        <a href="policyandprogram#The-WA-Homelessness-Strategy">
+                            <span class="title">The WA Homelessness Strategy: Action Plan 2020-2025</span>
+                        </a>
+                    </div>
+                    <br>
+                </li>
+                <li>
                      <div class="collapsible-menu-header">
                         <a href="authors.html">
                             <span class="title">Authors</span>
@@ -110,12 +123,13 @@
     <div class="spacer"></div>
     <div class="clr"></div>
     <br>
-    <h2>The WA Homelessness Strategy: Action Plan 2020-2025</h2>
-    <p>
-        Released in July 2020, the first Action Plan of the 10-Year Strategy on Homelessness focuses on ending rough sleeping, building a No Wrong Door approach to service delivery, increasing low-barrier crisis responses, and supporting innovation. In 2020, the Western Australian Government provided $71.8 million funding boost for homelessness services and $34.5 million for the Housing First Homelessness Initiative (HFHI).
-        <br>
-        A summary of the actions, planned and already ongoing activities, and Western Australian and service level initiatives for each of the four outcome areas identified in the Action Plan is detailed in the table below. The Western Australian Government’s Strategy and initiatives together with reforms in areas such social housing supply, FDV, out of home care and youth justice, support the agenda to end homelessness in Western Australia.
-        <br>
+    <div id="The-WA-Homelessness-Strategy">
+        <h2>The WA Homelessness Strategy: Action Plan 2020-2025</h2>
+        <p>
+            Released in July 2020, the first Action Plan of the 10-Year Strategy on Homelessness focuses on ending rough sleeping, building a No Wrong Door approach to service delivery, increasing low-barrier crisis responses, and supporting innovation. In 2020, the Western Australian Government provided $71.8 million funding boost for homelessness services and $34.5 million for the Housing First Homelessness Initiative (HFHI).
+            <br>
+            A summary of the actions, planned and already ongoing activities, and Western Australian and service level initiatives for each of the four outcome areas identified in the Action Plan is detailed in the table below. The Western Australian Government’s Strategy and initiatives together with reforms in areas such social housing supply, FDV, out of home care and youth justice, support the agenda to end homelessness in Western Australia.
+            <br>
         The service level initiatives featured below do not in any way represent a comprehensive list of all of the initiatives in place in Western Australia, but provide insights into the breadth of initiatives operating and some of the different ways in which the homelessness service system is working to end homelessness.
     </p>
     <br>
@@ -436,7 +450,7 @@
 
         <img src="csi-uwa logo.png" width="310" height="90" align="right">
 
-
+    </div>
 </div>
 
 <div id="footer">
