--- a/policyandprogram.html
+++ b/policyandprogram.html
@@ -83,7 +83,7 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="policyandprogram.html">
-                            <span class="title">Trends in homelessness in WA</span>
+                            <span class="title">West Australian policy and program environment</span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
