--- a/funding.html
+++ b/funding.html
@@ -75,7 +75,7 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="funding.html">
-                            <span class="title">Funding of homelessness services</span>
+                            <span class="title"><u>Funding of homelessness services</u></span>
                         </a>
                     </div>
                 </li>
