--- a/livedexperience.html
+++ b/livedexperience.html
@@ -1,1 +1,518 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</title>
+    <meta charset="utf-8">
+    <!-- Load CSS -->
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <!-- Load jQuery library -->
+    <script src="scripts/jquery-1.6.2.min.js"></script>
+    <!-- Load custom js -->
+    <script src="scripts/panelslide.js"></script>
+    <script src="scripts/custom.js"></script>
+    <!-- Load topcontrol js -->
+    <script src="scripts/scrolltopcontrol.js"></script>
+    <!-- Load NIVO Slider -->
+    <link rel="stylesheet" href="css/nivo-slider.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/nivo-theme.css" type="text/css" media="screen">
+    <script src="scripts/jquery.nivo.slider.pack.js"></script>
+    <script src="scripts/nivo-options.js"></script>
+    <!-- Load collapsible sidebar -->
+    <script src="scripts/jquery-2.1.1.min.js"></script>
+    <script src="scripts/materialize.min.js"></script>
+</head>
+<body>
+<!--This is the START of the menu-->
+      <div id="menu-wrapper">
+        <div id="main-menu">
+            <ul class="collapsible" data-collapsible="accordion">
+                <li>
+                    <div class="collapsible-menu-header">
+                        <a href="index.html">
+                            <span class="title">WAAEH Outcomes Measurement Framework</span>
+                        </a>
+                    </div>
+                    <br>
+                </li>
+                <li>
+                    <div class="collapsible-menu-header">
+                        <a href="trendsinhomelessness.html">
+                            <span class="title">Trends in homelessness in WA</span>
+                        </a>
+                    </div>
+                    <div class="collapsible-menu-body">
+                        <a href="trendsinhomelessness.html#Ending-chronic-homelessness">
+                            <span class="title">Ending chronic homelessness in WA</span>
+                        </a>
+                        <br><br>
+                        <a href="trendsinhomelessness.html#Reducing-the-rate-of-homelessness">
+                            <span class="title">Reducing the rate of homelessness in WA</span>
+                        </a>
+                        <br><br>
+                        <a href="trendsinhomelessness.html#Reducing-Aboriginal-homelessness">
+                            <span class="title">Reducing Aboriginal homelessness</span>
+                        </a>
+                        <br><br>
+                        <a href="trendsinhomelessness.html#Addressing-the-needs">
+                            <span class="title">Addressing the needs of those experiencing homelessness</span>
+                        </a>
+                    </div>
+                    <br>
+                </li>
+                <li>
+                    <div class="collapsible-menu-header">
+                        <a href="preventinghomelessness.html">
+                            <span class="title">Preventing homelessness in WA</span>
+                        </a>
+                    </div>
+                    <div class="collapsible-menu-body">
+                        <a href="preventinghomelessness.html#Addressing-underlying-drivers">
+                            <span class="title">Addressing underlying drivers of homelessness in Western Australia</span>
+                        </a>
+                    </div>
+                    <br>
+                </li>
+                <li>
+                    <div class="collapsible-menu-header">
+                        <a href="funding.html">
+                            <span class="title">Funding of homelessness services</span>
+                        </a>
+                    </div>
+                </li>
+                <br>
+                <li>
+                     <div class="collapsible-menu-header">
+                        <a href="livedexperience.html">
+                          <span class="title"><u>Lived Experience</u></span>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-menu-header">
+                        <a href="policyandprogram.html">
+                            <span class="title">West Australian policy and program environment</span>
+                        </a>
+                    </div>
+                    <div class="collapsible-menu-body">
+                        <a href="policyandprogram#The-WA-Homelessness-Strategy">
+                            <span class="title">The WA Homelessness Strategy: Action Plan 2020-2025</span>
+                        </a>
+                    </div>
+                    <br>
+                </li>
+                <li>
+                     <div class="collapsible-menu-header">
+                        <a href="authors.html">
+                            <span class="title">Authors</span>
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+<!--END of menu-->
+<!--This is the START of the content-->
+</div>
+<div id="content">
+    <table class="header-table" style="border:1">
+        <tr>
+            <td style="width:70%; vertical-align:top;">
+                <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
+                <br>
+                <h2><i>Dashboard 2022</i></h2>
+                <h4>Version 4.0 (Demo)</h4><br>
+            </td>
+            <td style="width:30%; vertical-align:top;">
+                <img class="logo" src="waeeh logo with text.png" width="300" height="150">
+            </td>
+        </tr>
+    </table>
+    <div class="spacer"></div>
+    <div class="clr"></div>
+    <br>
+    <div id="The-WA-Homelessness-Strategy">
+        <h2>The WA Homelessness Strategy: Action Plan 2020-2025</h2>
+        <p>
+            Released in July 2020, the first Action Plan of the 10-Year Strategy on Homelessness focuses on ending rough sleeping, building a No Wrong Door approach to service delivery, increasing low-barrier crisis responses, and supporting innovation. In 2020, the Western Australian Government provided $71.8 million funding boost for homelessness services and $34.5 million for the Housing First Homelessness Initiative (HFHI).
+            <br>
+            A summary of the actions, planned and already ongoing activities, and Western Australian and service level initiatives for each of the four outcome areas identified in the Action Plan is detailed in the table below. The Western Australian Government’s Strategy and initiatives together with reforms in areas such social housing supply, FDV, out of home care and youth justice, support the agenda to end homelessness in Western Australia.
+            <br>
+        The service level initiatives featured below do not in any way represent a comprehensive list of all of the initiatives in place in Western Australia, but provide insights into the breadth of initiatives operating and some of the different ways in which the homelessness service system is working to end homelessness.
+    </p>
+    <br>
+      <table class="styled-table">
+                <thead>
+                <tr>
+                    <th align="center" colspan="3"><b>Outcomes and current initiatives resulting from the Action Plan of the 10-Year Strategy on Homelessness</b></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><i>Outcome</i></td>
+                    <td><i>WA Government initiatives</i></td>
+                    <td><i>Service level initiatives (including those funded in part or full by the WA Government)</i></td>
+                </tr>
+                <tr>
+                    <td width="33%" rowspan="7">
+                        Improving Aboriginal wellbeing
+                    </td>
+                    <td width="33%">
+                        Boorloo Bidee Mia
+                    </td>
+                    <td width="33%">
+                        Nitja Nop Yorga Ngulla Mia
+                    </td>
+                </tr>
+                <tr>
+                    <td rowspan="6"></td>
+                    <td>
+                        Wungening Moort
+                    </td>
+                </tr>
+                 <tr>
+                    <td>
+                        Target 120 (T120) program in Kununurra
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        ACHO Alliance
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Moorditj Mia
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Barn Doyintj Doyintj
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Boola Moort Tenancy Support Program
+                    </td>
+                </tr>
 
+                <tr>
+                    <td rowspan="9">
+                        Providing safe, secure and stable homes
+                    </td>
+                    <td>
+                        HFHI
+                    </td>
+                    <td>
+                        The 50 Lives 50 Homes (50 Lives) program
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Housing Investment Package
+                    </td>
+                    <td>
+                        The Zero Project
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Refurbishing 1,500 existing public and community housing dwellings and implementing a rolling maintenance program for almost 4,000 regional dwellings.
+                    </td>
+                    <td>
+                        The Tiny Houses Initiative
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Common Ground facilities in East Perth and Mandurah.
+                    </td>
+                    <td>
+                        My Home projects
+                    </td>
+                </tr>
+                <tr>
+                    <td rowspan="5"></td>
+                    <td>
+                        Horizon House
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        The LIFT Program
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Tuart House
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Tom Fisher House
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Koort Boodja
+                    </td>
+                </tr>
+                <tr>
+                    <td rowspan="30">
+                        Preventing homelessness
+                    </td>
+                    <td>
+                        Path to Safety: Western Australia’s strategy to reduce family and domestic violence 2020-2030
+                    </td>
+                    <td>
+                        Home Stretch Trial
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        A Safe Place: A Western Australian strategy to provide safe and stable accommodation, and support to people experiencing mental health, alcohol and other drug issues 2020-2025 (A Safe Place)
+                    </td>
+                    <td>
+                        12 Buckets
+                    </td>
+                </tr>
+                <tr>
+                    <td rowspan="28">
+                        Our Priorities: Sharing Prosperity
+                    </td>
+                    <td>
+                        T120
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Royal Perth Hospital (RPH) Homeless Team
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Mental Healthy Homeless Pathways
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        After Hours Support Service program
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        StayWitch
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Homeless Discharge Facilitation Fund Project
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Homeless Outreach Dual Diagnosis Service
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Choices Post Discharge program
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        PILLAR
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Centrecare’s Housing Support Worker: Drug and Alcohol Initiative
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Centrecare’s Homelessness Accommodation Support Worker – South East & North West Metropolitan
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Entrypoint Perth
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Entrypoint Outreach
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Centrecare Family Accommodation Service
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Centrecare’s Sky service
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Private Rental Advocacy and Support Services (PRASS)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Residential Rent Relief Grant Scheme
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Zonta House
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Ground and Co
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Ebenezer Aboriginal Corporation’s Vocational Training and Employment Centre
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Homelessness Engagement Assessment Response Team (HEART)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Financial Counselling Network
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        The Bunbury Supportive Landlord Pilot (BSLP)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        St. Patrick’s Health and Dental Clinic
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Passages Youth Engagement Hubs
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Tranby engagement hub
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Reconnecting Lives Program (RLP)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Safe Night Space
+                    </td>
+                </tr>
+                <tr>
+                    <td rowspan="3">
+                        Strengthening and coordinating our responses and impact
+                    </td>
+                    <td>
+                        No Wrong Door
+                    </td>
+                    <td>
+                        WAAEH Evaluation Framework and the Youth Homelessness Action Plan
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Online Homelessness Services Portal
+                    </td>
+                    <td>
+                        YHAC
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Our Priorities: Sharing Prosperity
+                    </td>
+                    <td>
+                        HOME Hear of My Experience project
+                    </td>
+                </tr>
+
+
+
+
+
+
+
+                </tbody>
+            </table>
+
+        <img src="csi-uwa logo.png" width="310" height="90" align="right">
+
+    </div>
+</div>
+
+<div id="footer">
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="images/up.png"></button>
+
+</div>
+
+
+</div>
+
+<!--END of content-->
+<script>
+
+//collapsible js
+
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+  coll[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var content = this.nextElementSibling;
+    if (content.style.display === "block") {
+      content.style.display = "none";
+      } else {
+      content.style.display = "block";
+      }
+      });
+      }
+
+$( ".collapsible div" ).mouseover(function() { $(this).trigger('click'); });
+
+//scroll to top button
+//Get the button
+var mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+
+</script>
+
+  </body>
+</html>
