--- a/funding.html
+++ b/funding.html
@@ -82,6 +82,26 @@
                 <br>
                 <li>
                      <div class="collapsible-menu-header">
+                        <a href="livedexperience.html">
+                            <span class="title">Lived Experience</span>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-menu-header">
+                        <a href="policyandprogram.html">
+                            <span class="title">West Australian policy and program environment</span>
+                        </a>
+                    </div>
+                    <div class="collapsible-menu-body">
+                        <a href="policyandprogram#The-WA-Homelessness-Strategy">
+                            <span class="title">The WA Homelessness Strategy: Action Plan 2020-2025</span>
+                        </a>
+                    </div>
+                    <br>
+                </li>
+                <li>
+                     <div class="collapsible-menu-header">
                         <a href="authors.html">
                             <span class="title">Authors</span>
                         </a>
