--- a/policyandprogram.html
+++ b/policyandprogram.html
@@ -81,6 +81,13 @@
                 </li>
                 <br>
                 <li>
+                     <div class="collapsible-menu-header">
+                        <a href="livedexperience.html">
+                            <span class="title">Lived Experience</span>
+                        </a>
+                    </div>
+                </li>
+                <li>
                     <div class="collapsible-menu-header">
                         <a href="policyandprogram.html">
                             <span class="title"><u>West Australian policy and program environment</u></span>
