--- a/preventinghomelessness.html
+++ b/preventinghomelessness.html
@@ -62,7 +62,7 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="preventinghomelessness.html">
-                            <span class="title">Preventing homelessness in WA</span>
+                            <span class="title"><u>Preventing homelessness in WA</u></span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
@@ -78,6 +78,26 @@
                             <span class="title">Funding of homelessness services</span>
                         </a>
                     </div>
+                </li>
+                <li>
+                     <div class="collapsible-menu-header">
+                        <a href="livedexperience.html">
+                            <span class="title">Lived Experience</span>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-menu-header">
+                        <a href="policyandprogram.html">
+                            <span class="title">West Australian policy and program environment</span>
+                        </a>
+                    </div>
+                    <div class="collapsible-menu-body">
+                        <a href="policyandprogram#The-WA-Homelessness-Strategy">
+                            <span class="title">The WA Homelessness Strategy: Action Plan 2020-2025</span>
+                        </a>
+                    </div>
+                    <br>
                 </li>
                 <br>
                 <li>
