--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="index.html">
-                            <span class="title">WAAEH Outcomes Measurement Framework</span>
+                            <span class="title"><u>WAAEH Outcomes Measurement Framework</u></span>
                         </a>
                     </div>
                     <br>
@@ -80,6 +80,26 @@
                     </div>
                 </li>
                 <br>
+                <li>
+                     <div class="collapsible-menu-header">
+                        <a href="livedexperience.html">
+                            <span class="title">Lived Experience</span>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-menu-header">
+                        <a href="policyandprogram.html">
+                            <span class="title">West Australian policy and program environment</span>
+                        </a>
+                    </div>
+                    <div class="collapsible-menu-body">
+                        <a href="policyandprogram#The-WA-Homelessness-Strategy">
+                            <span class="title">The WA Homelessness Strategy: Action Plan 2020-2025</span>
+                        </a>
+                    </div>
+                    <br>
+                </li>
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="authors.html">
