--- a/trendsinhomelessness.html
+++ b/trendsinhomelessness.html
@@ -81,6 +81,14 @@
                 </li>
                 <br>
                 <li>
+                     <div class="collapsible-menu-header">
+                        <a href="livedexperience.html">
+                          <span class="title"><u>Lived Experience</u></span>
+                        </a>
+                    </div>
+                </li>
+                <br>
+                <li>
                     <div class="collapsible-menu-header">
                         <a href="policyandprogram.html">
                             <span class="title">West Australian policy and program environment</span>
