--- a/trendsinhomelessness.html
+++ b/trendsinhomelessness.html
@@ -83,7 +83,7 @@
                 <li>
                      <div class="collapsible-menu-header">
                         <a href="livedexperience.html">
-                          <span class="title"><u>Lived Experience</u></span>
+                          <span class="title">Lived Experience</span>
                         </a>
                     </div>
                 </li>
