--- a/livedexperience.html
+++ b/livedexperience.html
@@ -148,7 +148,7 @@
     </p>
     <br>
     <br>
-        <p> <centre><i>“A safe place for myself, daughter and grandchild”.”</i></centre>
+        <p> <centre><i>“A safe place for myself, daughter and grandchild.”</i></centre>
     </p>
     <br>
     <br>
