--- a/livedexperience.html
+++ b/livedexperience.html
@@ -140,47 +140,47 @@
     </p>
     <br>
     <br>
-        <p> <centre><i>“A home, stability for my son so he can attend school regularly and participate in normal childhood activities.”</i></centre>
+        <p> <center><i>“A home, stability for my son so he can attend school regularly and participate in normal childhood activities.”</i></center>
     </p>
     <br>
     <br>
-        <p> <centre><i>“I need more contact with supportive people.”</i></centre>
+        <p> <center><i>“I need more contact with supportive people.”</i></center>
     </p>
     <br>
     <br>
-        <p> <centre><i>“A safe place for myself, daughter and grandchild.”</i></centre>
+        <p> <center><i>“A safe place for myself, daughter and grandchild.”</i></center>
     </p>
     <br>
     <br>
-        <p> <centre><i>"Just a roof over my head and somewhere to put my baby girl (dog)."</i></centre>
+        <p> <center><i>"Just a roof over my head and somewhere to put my baby girl (dog)."</i></center>
     </p>
     <br>
     <br>
-        <p> <centre><i>"To be able to be me without judgement, free.”</i></centre>
+        <p> <center><i>"To be able to be me without judgement, free.”</i></center>
     </p>
     <br>
     <br>
-        <p> <centre><i>“A door, a bed and a toilet - not to be watched, a friend a place of my own.”</i></centre>
+        <p> <center><i>“A door, a bed and a toilet - not to be watched, a friend a place of my own.”</i></center>
     </p>
     <br>
     <br>
-        <p> <centre><i>“A home for my families security and to know the home we have is for a long period.”</i></centre>
+        <p> <center><i>“A home for my families security and to know the home we have is for a long period.”</i></center>
     </p>
     <br>
     <br>
-        <p> <centre><i>“A house, food, stable accommodation, social interaction and having a plan of action to organise your life.”</i></centre>
+        <p> <center><i>“A house, food, stable accommodation, social interaction and having a plan of action to organise your life.”</i></center>
     </p>
     <br>
     <br>
-         <p> <centre><i>“A safe, stable home where I can sleep at night and have food in the fridge.”</i></centre>
+         <p> <center><i>“A safe, stable home where I can sleep at night and have food in the fridge.”</i></center>
     </p>
     <br>
     <br>
-         <p> <centre><i>“Housing, medication, job, good mental health.”</i></centre>
+         <p> <center><i>“Housing, medication, job, good mental health.”</i></center>
     </p>
     <br>
     <br>
-         <p> <centre><i>“Social Contact, people I can relate to, a safe house, regular exercise, gardening.”</i></centre>
+         <p> <center><i>“Social Contact, people I can relate to, a safe house, regular exercise, gardening.”</i></center>
     </p>
     <br>
     <br>
