--- a/livedexperience.html
+++ b/livedexperience.html
@@ -140,6 +140,7 @@
     </p>
     <br>
     <br>
+    <blockquote class="blockquote">
         <p> <center><i>“A home, stability for my son so he can attend school regularly and participate in normal childhood activities.”</i></center>
     </p>
     <br>
@@ -184,6 +185,7 @@
     </p>
     <br>
     <br>
+    </blockquote>
     
 </div>
 
