--- a/advancetozero.html
+++ b/advancetozero.html
@@ -130,10 +130,12 @@
     <div class="spacer"></div>
     <div class="clr"></div>
     <br>
-    <div id="The-WA-Homelessness-Strategy">
-        <h2>The WA Homelessness Strategy: Action Plan 2020-2025</h2>
-        <p>
-            Released in July 2020, the first Action Plan of the 10-Year Strategy on Homelessness focuses on ending rough sleeping, building a No Wrong Door approach to service delivery, increasing low-barrier crisis responses, and supporting innovation. In 2020, the Western Australian Government provided $71.8 million funding boost for homelessness services and $34.5 million for the Housing First Homelessness Initiative (HFHI).
+        <h2>A decade of community data collection of people experiencing homelessness</h2>
+        <p> The Advance to Zero database is a community-based data set which provides substantial detail and context about people experiencing homelessness are located by and/or engage with homelessness services.  In Western Australia, 3,183 surveys have been conducted with people experiencing homelessness from 2012 to 30th June 2022, mostly living in Perth.  
+    </p>
+    <br>
+        <p> 
+            
             <br>
             A summary of the actions, planned and already ongoing activities, and Western Australian and service level initiatives for each of the four outcome areas identified in the Action Plan is detailed in the table below. The Western Australian Government’s Strategy and initiatives together with reforms in areas such social housing supply, FDV, out of home care and youth justice, support the agenda to end homelessness in Western Australia.
             <br>
@@ -457,7 +459,6 @@
 
         <img src="csi-uwa logo.png" width="310" height="90" align="right">
 
-    </div>
 </div>
 
 <div id="footer">
