--- a/advancetozero.html
+++ b/advancetozero.html
@@ -134,13 +134,13 @@
         <p> The Advance to Zero database is a community-based data set which provides substantial detail and context about people experiencing homelessness are located by and/or engage with homelessness services.  In Western Australia, 3,183 surveys have been conducted with people experiencing homelessness from 2012 to 30th June 2022, mostly living in Perth.  
     </p>
     <br>
-        <p> 
-            
-            <br>
-            A summary of the actions, planned and already ongoing activities, and Western Australian and service level initiatives for each of the four outcome areas identified in the Action Plan is detailed in the table below. The Western Australian Government’s Strategy and initiatives together with reforms in areas such social housing supply, FDV, out of home care and youth justice, support the agenda to end homelessness in Western Australia.
-            <br>
-        The service level initiatives featured below do not in any way represent a comprehensive list of all of the initiatives in place in Western Australia, but provide insights into the breadth of initiatives operating and some of the different ways in which the homelessness service system is working to end homelessness.
-    </p>
+    <blockquote class="blockquote">
+        <h3>Key findings:</h3>
+            <li>62% male, average age 40 years</li>
+            <li>Women on the whole were younger than their male counterparts and experienced more significant mental health and general health issues as well as violence on the streets</li>
+            <li>1 in 6 aged under 24</li>
+            <li>52% were rough sleeping (eg streets, parks, cars), 24% in temporary accommodation (eg couch surfing)</li>
+    </blockquote>
     <br>
       <table class="styled-table">
                 <thead>
